modified:   index.html 	modified:   main.js 	modified:   package-lock.json 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
-@import "node_modules/ol/ol.css";
+@import 'node_modules/ol/ol.css';
 
-html, body {
-  margin: 0;
-  height: 100%;
+html,
+body {
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	margin: 0;
+	height: 100vh;
+	position: fixed;
 }
+
 #map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 100vw;
+	height: 100vh;
 }
